--- a/package.json
+++ b/package.json
@@ -16,33 +16,36 @@
     "db:auth": "npx @better-auth/cli generate --config server/utils/auth.ts --output server/database/schemas/users.ts --y"
   },
   "dependencies": {
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/ui": "^3.2.0",
-    "@orpc/client": "^1.7.2",
-    "@orpc/server": "^1.7.2",
-    "@orpc/vue-query": "^1.7.2",
+    "@nuxt/image": "^1.11.0",
+    "@nuxt/ui": "^4.1.0",
+    "@orpc/client": "^1.10.0",
+    "@orpc/server": "^1.10.0",
+    "@orpc/vue-query": "^1.10.0",
     "@t3-oss/env-core": "^0.13.8",
-    "@tanstack/vue-query": "^5.83.0",
-    "@vueuse/core": "^13.5.0",
-    "better-auth": "^1.3.2",
-    "dotenv": "^17.2.0",
-    "drizzle-orm": "^0.44.3",
-    "nuxt": "^4.0.0",
+    "@tanstack/vue-query": "^5.90.5",
+    "@vueuse/core": "^13.9.0",
+    "better-auth": "^1.3.29",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
+    "nuxt": "^4.1.3",
     "postgres": "^3.4.7",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "zod": "^3.24.0"
+    "tailwindcss": "^4.1.16",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.7.1",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.31.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@nuxt/eslint": "^1.9.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "@types/node": "^24.9.1",
+    "drizzle-kit": "^0.31.5",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^2.2.10"
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^2.2.12"
   }
 }
